--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
-  }
+  },
+  "packageManager": "pnpm@9.9.0"
 }
